modified:   public/index.html 	modified:   public/manifest.json 	modified:   src/pages/customize/Customize.js

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Football Betting",
-  "name": "Football Betting",
+  "short_name": "TopBet",
+  "name": "TopBet",
   "icons": [
     {
       "src": "favicon.ico",
